added zod validations

--- a/course-selling-app/coursery/.env
+++ b/course-selling-app/coursery/.env
@@ -1,1 +1,3 @@
 CONNECTION_STRING = "mongodb+srv://Rushi:Rushi%4021@cluster0.fiseedp.mongodb.net/coursery-db"
+JWT_ADMIN_PASSWORD = "AdminJwtItIs";
+JWT_USER_PASSWORD = "UserJwtItIs";
