--- a/course-selling-app/coursery/.env.example
+++ b/course-selling-app/coursery/.env.example
@@ -1,1 +1,3 @@
 CONNECTION_STRING = "mongodb+srv://myDatabaseUser:D1fficultP%40ssw0rd@cluster0.example.mongodb.net/?retryWrites=true&w=majority"
+JWT_ADMIN_PASSWORD = "enterValidHere"
+JWT_USER_PASSWORD = "enterValidHere"
