--- a/Postgres and SQL Databases/package.json
+++ b/Postgres and SQL Databases/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/express": "^5.0.6",
     "@types/pg": "^8.16.0",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "pg": "^8.16.3",
     "typescript": "^5.9.3"
